--- a/Follow Mashable on Email, RSS & Social Media.html
+++ b/Follow Mashable on Email, RSS & Social Media.html
@@ -35,6 +35,8 @@
 <script src="http://rack.2.mshcdn.com/assets/polyfill-6620db93ad92c8f787391361dfe3f23c.js" type="text/javascript"></script>
 <![endif]-->
 <script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script></head>
+<script src="./scripts/main.js" async=""></script>
+<link rel="stylesheet" type="text/css" href="./styles/main.css">
 <body class="body_posts body_show" data-jsid="posts/show" data-postid="732597" data-sec0="socmed" data-sec1="howto" data-sec2="posts" viewport="fixed">
 <h1 class="semantic">Mashable</h1>
 <header id="flyout-container" style="display: none;"><ul class="main-menu nav flyout">
