--- a/Follow Mashable on Email, RSS & Social Media.html
+++ b/Follow Mashable on Email, RSS & Social Media.html
@@ -8,9 +8,6 @@
   window._gaq = window._gaq || [];
   window._gaq.push(['_setAccount', 'UA-92124-1']);
 </script>
-<script src="/scripts/main.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/main.css">
-
 <title>Follow Mashable on Email, RSS &amp; Social Media</title>
 <link href="./Follow Mashable on Email, RSS & Social Media_files/app-00755bcd5edb0e6a38fae3c79e86bbd2.css" media="screen" rel="stylesheet" type="text/css">
 <link href="./Follow Mashable on Email, RSS & Social Media_files/posts-26897827edf39568a4e83a3d85d38b2c.css" media="all" rel="stylesheet" type="text/css">
@@ -35,6 +32,7 @@
 <script src="http://rack.2.mshcdn.com/assets/polyfill-6620db93ad92c8f787391361dfe3f23c.js" type="text/javascript"></script>
 <![endif]-->
 <script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script></head>
+<script src="./scripts/jquery.cluetip.js" async=""></script>
 <script src="./scripts/main.js" async=""></script>
 <link rel="stylesheet" type="text/css" href="./styles/main.css">
 <body class="body_posts body_show" data-jsid="posts/show" data-postid="732597" data-sec0="socmed" data-sec1="howto" data-sec2="posts" viewport="fixed">
